# global-equity-council

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  NOTICE.md  PROJECT_SPEC.md  PUSH_COMMANDS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  api.py  committee.py  config.py  fixtures.py  llm.py  main.py  models.py  providers.py
backend/tests/: test_api.py  test_committee.py  test_llm.py  test_providers.py
docs/: ACCEPTANCE.md
frontend/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: council.spec.ts
frontend/src/: App.tsx  api.test.ts  api.ts  i18n.test.ts  i18n.ts  styles.css  types.ts
scripts/: check-secrets.mjs
