[project]
name = "global-equity-council-api"
version = "1.0.0"
description = "Provenance-first global equity research council API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "psycopg[binary]>=3.2,<4",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["tests"]
